<resources>
    <string name="app_name">Final App</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sports_app">Sports App</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log in</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="logout">Logout</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="account_settings">Account Settings</string>
    <string name="enter_you_name">Enter you name</string>
    <string name="enter_your_hall_of_residence">Enter your hall of residence</string>
    <string name="save_account_settings">Save Account Settings</string>
    <string name="sports_posts">Sports\' Posts</string>
    <string name="er1">Enter your Hall of Residence</string>
    <string name="r2">Enter your name</string>
    <string name="click_on_star_to_select_an_image">click on star to select an image</string>
    <string name="profile_pic">Profile pic</string>
    <string name="hi">\"Error: \"</string>
    <string name="add_post">Add Post</string>
    <string name="add_a_post">Add a Post</string>
    <string name="enter_description_like_date_time_and_any_other_details">Enter description like date, time and any other details..</string>
    <string name="enter_venue">Enter Venue</string>
    <string name="enter_details_of_the_event">Enter details of the event</string>
    <string name="add_this_post">Add this post</string>
    <string name="q1">Enter details like date, time, venue or any other details</string>
    <string name="enter_sport_s_name">Enter Sport\'s name</string>
    <string name="textview">TextView</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="g">Username</string>
    <string name="describe">Describe</string>
    <string name="z">Sport\'s name</string>
    <string name="x">Description here</string>
    <string name="l">View Posts</string>
    <string name="any_other_details">Any other details ...</string>
    <string name="enter_the_time">Enter the Time</string>
    <string name="enter_the_venue">Enter the Venue</string>
    <string name="enter_the_date">Enter the Date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="venue">Venue</string>
    <string name="email">Email</string>
    <string name="email_id">Email ID</string>
    <string name="host">Host</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
</resources>
