<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:hapticFeedbackEnabled="false"
        android:padding="8dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/settings_mainbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#2EA126"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/account_settings"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/postbtn"
        app:layout_constraintStart_toEndOf="@+id/logoutbtn"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:hapticFeedbackEnabled="false"
        android:padding="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/sports_posts"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/postbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:padding="8dp"
        android:text="@string/add_post"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/main_blog_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postbtn" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/l"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/myListView"
        android:layout_width="398dp"
        android:layout_height="535dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_mainbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>